# ROS2_Tasks

./: README.md  ROS2.md  frames_2025-01-10_00.59.03.gv
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/robot_application/lib/robot_application/: init_pose  init_pose2  init_robot_pose  init_robot_pose1  init_robot_pose2  waypoint  waypoint2
install/robot_application/share/robot_application/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/task2/lib/task2/: listener  talker
install/task2/share/task2/: package.sh
install/task2/share/task2/config/: config3.rviz  task2.rviz
install/task2/share/task2/launch/: display_robot.launch.py  gazebo_sim1.launch.py  gazebo_sim_2_robot.launch.py  gazebo_sim_ns.launch.py  navi_ns.launch.py  navigation2.launch.py  navigation2_2robots.launch.py  navigation2_ns.launch.py  test1.launch  test1.launch.py
install/task2/share/task2/maps/: room1.pgm
install/task2/share/task2/urdf/: base_ns.urdf.xacro  common_inertia_ns.xacro  test.urdf  trans_robot2.urdf.xacro  trans_robot_ns.urdf.xacro  trans_robot_ns1.urdf.xacro  trans_robot_ns2.urdf.xacro  trans_robot_ns_after.urdf.xacro
install/task2/share/task2/urdf/actuactor/: caster_ns.urdf.xacro  wheel_ns.urdf.xacro
install/task2/share/task2/urdf/plugins/: gazebo_control_plugin2.xacro  gazebo_control_plugin_ns.xacro  gazebo_sensor_plugin2.xacro  gazebo_sensor_plugin_ns.xacro
install/task2/share/task2/urdf/sensor/: camera.urdf.xacro  camera_ns.urdf.xacro  imu.urdf.xacro  imu2.urdf.xacro  imu_ns.urdf.xacro  laser.urdf.xacro  laser2.urdf.xacro  laser_ns.urdf.xacro
install/task2/share/task2/world/largeRoom/: model.sdf
install/task2/share/task2/world/midRoom/: model.sdf
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/robot_application/: setup.py
src/robot_application/robot_application/: init_pose.py  init_pose2.py  init_robot_pose1.py  waypoint2.py
src/task2/: CMakeLists.txt  package.xml
src/task2/config/: nav2_params.yaml  robot2_nav2_params.yaml
src/task2/config/rviz/: config.rviz  displayBetter.rviz
src/task2/launch/: gazebo_sim.launch.py  gazebo_sim_2_robot.launch.py
src/task2/maps/: room1.yaml
src/task2/src/: subscriber_member_function.cpp
src/task2/urdf/: base.urdf.xacro  base2.urdf.xacro  first_robot.xacro  trans_robot.urdf.xacro
src/task2/urdf/actuactor/: caster.urdf.xacro  wheel.urdf.xacro
src/task2/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_control_plugin2.xacro  gazebo_sensor_plugin.xacro  gazebo_sensor_plugin2.xacro
src/task2/urdf/sensor/: camera2.urdf.xacro
src/task2/world/: custom_world.world  new_world.world
src/task2/world/RightRoom/: model.config  model.sdf
src/task2/world/largeRoom/: model.config
src/task2/world/midRoom/: model.config
